# komarov-andrey

./: komarov.andrey.sln  ololo
cg2011/p1.1/: CMakeLists.txt
cg2011/p1.1/slow/: main.cpp
cg2011/p1.1/src/: essa.h  main.cpp
cg2012.1/04/: CMakeLists.txt
cg2012.1/04/src/: essa.h  main.cpp  point.cpp  point.h
cg2012.1/10/src/: main.cpp  mincircle.cpp  mincircle.h
cg2012.1/13/: CMakeLists.txt  viz.sh
cg2012.1/13/src/: delaunay.cpp  delaunay.h  main.cpp  (+3 more)
problem1.1/: last-message.txt
problem1.2/: last-message.txt  main.cpp  problem1.2.vcxproj
problem1.4/: big_int.cpp  big_int.h  compilation-errors.txt  compilation-warnings.txt  container.cpp  container.h  failed-test.txt  last-message.txt  long.cpp  long.h  main.cpp  problem1.4.vcxproj
problem2.1/: Makefile  big_int.cpp  big_int.h  big_int_test.cpp  compilation-warnings.txt  container.cpp  last-message.txt  problem2.1.vcxproj
problem3.1/: Makefile  big_int.h  calculator.cpp  compilation-errors.txt  compilation-warnings.txt  function.cpp  last-message.txt  problem3.1.vcxproj  utils.hpp
problem3.1/big_int/: container.h
problem3.1/parser/: grammar.cpp
problem3.1/tokenizer/: operator.cpp  operator.h  operator_plus.cpp
problem4.1/: compilation-errors.txt  last-message.txt  list.h  main.cpp  multiply_by_short.h
problem4.2/: compilation-errors.txt  last-message.txt  len.h  merge.h
trunk/: komarov.andrey.sln
trunk/cg2012.1/10/: CMakeLists.txt
trunk/cg2012.1/10/src/: mincircle.cpp  predicates.cpp  predicates.h
trunk/cg2012.1/13/: CMakeLists.txt  viz.sh
trunk/cg2012.1/13/src/: delaunay.cpp  main.cpp  point.h  predicates.h  sign.cpp
trunk/cg2012.1/13/viz/: plot.py  runall.sh
trunk/cg2012.1/22/: CMakeLists.txt
trunk/cg2012.1/22/src/: graph.cpp  graph.h  main.cpp
trunk/problem1.1/: main.cpp
trunk/problem1.2/: last-message.txt  main.cpp
trunk/problem1.4/: Makefile  big_int.cpp  big_int.h  compilation-errors.txt  compilation-warnings.txt  container.h  failed-test.txt  last-message.txt  long.cpp  long.h  problem1.4.vcxproj
trunk/problem2.1/: big_int.cpp  big_int.h  compilation-errors.txt  compilation-warnings.txt  container.cpp  container.h  last-message.txt
trunk/problem3.1/: big_int.cpp  calculator.h  compilation-errors.txt  container.cpp  function.h  last-message.txt  main.cpp  utils.cpp  utils.tpp
trunk/problem4.1/: compilation-errors.txt  last-message.txt  main.cpp  normalize_negative.h
trunk/problem4.2/: compilation-warnings.txt  last-message.txt  list.h  main.cpp  merge.h  slices.h  sort.h
(+14 files in other folders)
